[project]
name = "toolbox"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
	"click >= 8.3.1",
	"email-validator >= 2.3.0",
	"mutagen >= 1.47.0",
	"phonenumbers >= 9.0.0",
	"pycountry >= 1.20",
	"pydantic >= 2.12.0",
	"pydantic_extra_types >= 2.11.0",
	"tomlkit >= 0.14.0",
]

[project.scripts]
audiotag = "audiotag:main"
vcard = "vcard:main"

[tool.uv]
package = true

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
select = ["I001"]
fixable = ["I001"]
isort.lines-between-types = 1

[tool.basedpyright]
reportOptionalSubscript = false
reportUnknownMemberType = false
reportUnknownVariableType = false
